Added initial play framework layout

--- a/divshot-mockups/device_management.html
+++ b/divshot-mockups/device_management.html
@@ -46,6 +46,9 @@
             <li>
               <a href="#">Alert Management</a> 
             </li>
+            <li>
+              <a href="#">CDSI Management</a> 
+            </li>
           </ul>
           <div class="well">
             <p>This page allows you to add and configure devices. This page also allows
@@ -65,36 +68,31 @@
             <div>
               <input type="text" class="input-medium">
               <span class="help-inline">OPQ Device ID</span>
-              <button type="submit" class="btn btn-primary pull-right">Register Device</button>
-              <br>
-              <label class="checkbox" for="checkbox">
-                <input type="checkbox" value="true" id="checkbox" name="checkbox"> I want to participate in the
-                <a href="#">Community Data Sharing Initiative</a> .</label>
+              <br> 
             </div>
+            <input type="text" class="input-medium">
+            <span class="help-inline">Description</span>
+            <button type="submit" class="btn btn-primary pull-right">Register Device</button>
           </form>
           <table class="table well well-small">
             <thead>
               <tr>
                 <th>Registered OPQ Devices</th>
-                <th>Participating in
-                  <a href="#">CDSI</a> 
-                </th>
+                <th>Description</th>
                 <th></th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td>0123-4567-89AB-CDEF</td>
-                <td>Yes (click
-                  <a href="#"> here</a> to opt-out)</td>
+                <td>Home</td>
                 <td>
                   <a class="btn btn-danger pull-right">Remove</a> 
                 </td>
               </tr>
               <tr>
                 <td>ABCD-EF01-2345-6789</td>
-                <td>No (click
-                  <a href="#"> here</a> to opt-in)</td>
+                <td>Office</td>
                 <td>
                   <a class="btn btn-danger pull-right">Remove</a> 
                 </td>
@@ -106,15 +104,14 @@
           <p>
             <b>Register new OPQ device</b>
             <br> The device ID is a squence of 16 characters and letters that should have
-            been supplied with your OPQ device. This ID can also be obtained by connecting
-            the device to the computer via USB and running the
-            <a href="#">device configuration software</a> .</p>
+            been supplied with your OPQ device.&nbsp;</p>
           <p>
             <b>Registered OPQ Devices</b>
             <br> This lists the devices that are currently registered to your account.
             <br>
-            <br> You may also opt-in or opt-out each device from the
-            <a href="#">Community Data Sharing Initiative</a> by clicknig the link under the "Participating in CDSI" column.</p>
+            <br>
+            <br> 
+          </p>
         </div>
       </div>
     </div>
