--- a/divshot-mockups/power_quality_monitoring.html
+++ b/divshot-mockups/power_quality_monitoring.html
@@ -61,6 +61,16 @@
           <label class="checkbox" for="checkbox">
             <input type="checkbox" value="true" id="checkbox" name="checkbox"> Device</label>
           <hr>
+          <b>Filter Devices</b>
+          <label class="checkbox" for="checkbox">
+            <input type="checkbox" value="true" id="checkbox" name="checkbox" checked="checked">
+            <span>0123-4567-89AB-CDEF (Home)</span> 
+          </label>
+          <label class="checkbox" for="checkbox">
+            <input type="checkbox" value="true" id="checkbox" name="checkbox" checked="checked">
+            <span>ABCD-EF01-2345-6789 (Office)</span> 
+          </label>
+          <hr>
           <b>Timeline</b>
           <br>
           <select>
@@ -119,7 +129,7 @@
             <tr>
               <td>05-23-2013</td>
               <td>11:53:03</td>
-              <td>0123-4567-89AB-CDEF</td>
+              <td>0123-4567-89AB-CDEF (Home)</td>
               <td>
                 <a class="btn btn-block btn-info btn-mini">Frequency</a> 
               </td>
@@ -128,7 +138,7 @@
             <tr>
               <td>05-23-2013</td>
               <td>15:00:22</td>
-              <td>0123-4567-89AB-CDEF</td>
+              <td>0123-4567-89AB-CDEF (Home)</td>
               <td>
                 <a class="btn btn-block btn-danger btn-mini">Voltage</a> 
               </td>
@@ -137,7 +147,7 @@
             <tr>
               <td>05-23-2013</td>
               <td>23:44:11</td>
-              <td>ABCD-EF01-2345-6789</td>
+              <td>ABCD-EF01-2345-6789 (Office)</td>
               <td>
                 <a class="btn btn-block btn-inverse btn-mini">Device</a> 
               </td>
@@ -146,7 +156,7 @@
             <tr>
               <td>05-21-2013</td>
               <td>10:00:00</td>
-              <td>0123-4567-89AB-CDEF</td>
+              <td>0123-4567-89AB-CDEF (Office)</td>
               <td>
                 <a class="btn btn-block btn-danger btn-mini">Voltage</a> 
               </td>
@@ -170,7 +180,7 @@
           <br> You may also choose "Custom Range" in order to enter your own time range.
           When entering a custom time range, be sure to use mm/dd/yyyy for the date
           (i.e. 07/28/2013) and be sure to use a 24 hour clock format for the time
-          (i.e. 23:00 for</p>
+          (i.e. 23:00 instead of 11 PM).</p>
       </div>
     </div>
   </body>
