--- a/divshot-mockups/user_administration.html
+++ b/divshot-mockups/user_administration.html
@@ -46,6 +46,9 @@
             <li>
               <a href="#">Alert Management</a> 
             </li>
+            <li>
+              <a href="#">CDSI Management</a> 
+            </li>
           </ul>
           <div class="well">
             <p>This page allows you to configure basic information such as e-mail address,
@@ -61,49 +64,96 @@
               <b>Account Information</b> 
             </label>
             <div>
-              <input type="email" class="input-medium">
-              <span class="help-inline">E-mail Address (username)</span> 
+              <input type="text" class="input-large">
+              <span class="help-inline">First Name <b>*</b></span>
+              <div>
+                <input type="text" class="input-large">
+                <span class="help-inline">Last Name <b>*</b></span> 
+              </div>
             </div>
             <div>
-              <input type="password" class="input-medium">
-              <span class="help-inline">Password</span> 
+              <input type="email" class="input-large">
+              <span class="help-inline">E-mail Address <b>*</b></span> 
             </div>
             <div>
-              <input type="password" class="input-medium">
-              <span class="help-inline">Verify Password</span> 
-            </div>
-            <div class="form-actions">
-              <button type="submit" class="btn btn-primary">Update</button>
-            </div>
-          </form>
-          <form class="well well-small">
-            <label class="control-label">
-              <b>General Information</b> 
-            </label>
-            <hr>
-            <div>
-              <input type="text" class="input-medium">
-              <span class="help-inline">First Name</span> 
+              <input type="password" class="input-large">
+              <span class="help-inline">Password <b>*</b></span> 
             </div>
             <div>
-              <input type="text" class="input-medium">
-              <span class="help-inline">Last Name</span> 
+              <input type="password" class="input-large">
+              <span class="help-inline">Verify Password <b>*</b></span>
+              <br>
+              <select>
+                <option>Alabama</option>
+                <option>Alaska</option>
+                <option>Arizona</option>
+                <option>Arkansas</option>
+                <option>California</option>
+                <option>Colorado</option>
+                <option>Connecticut</option>
+                <option>Delaware</option>
+                <option>Florida</option>
+                <option>Georgia</option>
+                <option>Hawaii</option>
+                <option>Idaho</option>
+                <option>Illinois</option>
+                <option>Indiana</option>
+                <option>Iowa</option>
+                <option>Kansas</option>
+                <option>Kentucky</option>
+                <option>Louisiana</option>
+                <option>Maine</option>
+                <option>Maryland</option>
+                <option>Massachusetts</option>
+                <option>Michigan</option>
+                <option>Minnesota</option>
+                <option>Mississippi</option>
+                <option>Missouri</option>
+                <option>Montana</option>
+                <option>Nebraska</option>
+                <option>Nevada</option>
+                <option>New Hampshire</option>
+                <option>New Jersey</option>
+                <option>New Mexico</option>
+                <option>New York</option>
+                <option>North Carolina</option>
+                <option>North Dakota</option>
+                <option>Ohio</option>
+                <option>Oklahoma</option>
+                <option>Oregon</option>
+                <option>Pennsylvania</option>
+                <option>Rhode Island</option>
+                <option>South Carolina</option>
+                <option>South Dakota</option>
+                <option>Tennessee</option>
+                <option>Texas</option>
+                <option>Utah</option>
+                <option>Vermont</option>
+                <option>Virginia</option>
+                <option>Washington</option>
+                <option>West Virginia</option>
+                <option>Wisconsin</option>
+                <option>Wyoming</option>
+              </select>
+              <span class="help-inline">State <b>*</b></span>
+              <div>
+                <input type="text" class="input-large">
+                <span class="help-inline">City</span>
+                <div>
+                  <input type="text" class="input-large">
+                  <span class="help-inline">Zip Code</span> 
+                </div>
+              </div>
             </div>
             <div>
-              <input type="text" class="input-medium">
-              <span class="help-inline">Address</span> 
+              <input type="text" class="input-large">
+              <span class="help-inline">Street Name</span>
+              <span></span> 
             </div>
             <div>
-              <input type="text" class="input-medium">
-              <span class="help-inline">City</span> 
-            </div>
-            <div>
-              <input type="text" class="input-medium">
-              <span class="help-inline">State</span> 
-            </div>
-            <div>
-              <input type="text" class="input-medium">
-              <span class="help-inline">Zip Code</span> 
+              <input type="text" class="input-large">
+              <span class="help-inline">Street Number</span>
+              <span></span> 
             </div>
             <div class="form-actions">
               <button type="submit" class="btn btn-primary">Update</button>
@@ -116,15 +166,6 @@
             <br> Your account information allows you to access your data on the cloud and
             to manage OPQ devices under your control. Note that your e-mail address
             is your username.</p>
-          <p>
-            <b>General Information</b>
-            <br> This data is used to associate location information with your device.
-            This information will
-            <b>NOT</b> be shared unless you opt-in to our
-            <a href="#">Community Data Sharing Initiative</a> .
-            <br>
-            <br> See our
-            <a href="#">Privacy Policy</a> for more information.</p>
         </div>
       </div>
     </div>
