--- a/divshot-mockups/sign_up.html
+++ b/divshot-mockups/sign_up.html
@@ -30,7 +30,7 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid">
+    <div class="container">
       <div class="row-fluid"></div>
       <div class="span6">
         <form class="well well-small">
