--- a/divshot-mockups/sign_up.html
+++ b/divshot-mockups/sign_up.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
-  
-  <head>
+
+<head>
     <title>Sign Up</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
@@ -9,88 +9,142 @@
     <link rel="stylesheet" href="css/bootstrap-responsive.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-  </head>
-  
-  <body>
-    <div class="navbar">
-      <div class="navbar-inner">
+</head>
+
+<body>
+<div class="navbar">
+    <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="#">Open Power Quality</a>
-          <a></a>
-          <div class="navbar-content">
-            <ul class="nav">
-              <li>
-                <a href="#">Home</a> 
-              </li>
-              <li class="active">
-                <a href="#">Sign Up</a> 
-              </li>
-            </ul>
-          </div>
+            <a class="brand" href="#">Open Power Quality</a>
+            <div class="navbar-content">
+                <ul class="nav">
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li class="active">
+                        <a href="#">Sign Up</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
     </div>
-    <div class="container">
-      <div class="row-fluid"></div>
-      <div class="span6">
+</div>
+<div class="container">
+    <div class="span6">
         <form class="well well-small">
-          <label class="control-label">
-            <b>Account Information</b> 
-          </label>
-          <div>
-            <input type="email" class="input-medium">
-            <span class="help-inline">E-mail Address (username)</span> 
-          </div>
-          <div>
-            <input type="password" class="input-medium">
-            <span class="help-inline">Password</span> 
-          </div>
-          <div>
-            <input type="password" class="input-medium">
-            <span class="help-inline">Verify Password</span> 
-          </div>
-          <div>
-            <input type="text" class="input-medium">
-            <span class="help-inline">First Name</span> 
-          </div>
-          <div>
-            <input type="text" class="input-medium">
-            <span class="help-inline">Last Name</span> 
-          </div>
-          <div>
-            <input type="text" class="input-medium">
-            <span class="help-inline">Address</span> 
-          </div>
-          <div>
-            <input type="text" class="input-medium">
-            <span class="help-inline">City</span> 
-          </div>
-          <div>
-            <input type="text" class="input-medium">
-            <span class="help-inline">State</span> 
-          </div>
-          <div>
-            <input type="text" class="input-medium">
-            <span class="help-inline">Zip Code</span> 
-          </div>
-          <div class="form-actions">
-            <button type="submit" class="btn btn-primary">Create Account</button>
-            <button type="submit" class="btn btn-danger">Cancel</button>
-          </div>
+            <label class="control-label">
+                <b>Account Information</b>
+            </label>
+            <div>
+                <input type="text" class="input-large">
+                <span class="help-inline">First Name <b>*</b></span>
+                <div>
+                    <input type="text" class="input-large">
+                    <span class="help-inline">Last Name <b>*</b></span>
+                </div>
+            </div>
+            <div>
+                <input type="email" class="input-large">
+                <span class="help-inline">E-mail Address <b>*</b></span>
+            </div>
+            <div>
+                <input type="password" class="input-large">
+                <span class="help-inline">Password <b>*</b></span>
+            </div>
+            <div>
+                <input type="password" class="input-large">
+                <span class="help-inline">Verify Password <b>*</b></span>
+                <br />
+                <select>
+                    <option>Alabama</option>
+                    <option>Alaska</option>
+                    <option>Arizona</option>
+                    <option>Arkansas</option>
+                    <option>California</option>
+                    <option>Colorado</option>
+                    <option>Connecticut</option>
+                    <option>Delaware</option>
+                    <option>Florida</option>
+                    <option>Georgia</option>
+                    <option>Hawaii</option>
+                    <option>Idaho</option>
+                    <option>Illinois</option>
+                    <option>Indiana</option>
+                    <option>Iowa</option>
+                    <option>Kansas</option>
+                    <option>Kentucky</option>
+                    <option>Louisiana</option>
+                    <option>Maine</option>
+                    <option>Maryland</option>
+                    <option>Massachusetts</option>
+                    <option>Michigan</option>
+                    <option>Minnesota</option>
+                    <option>Mississippi</option>
+                    <option>Missouri</option>
+                    <option>Montana</option>
+                    <option>Nebraska</option>
+                    <option>Nevada</option>
+                    <option>New Hampshire</option>
+                    <option>New Jersey</option>
+                    <option>New Mexico</option>
+                    <option>New York</option>
+                    <option>North Carolina</option>
+                    <option>North Dakota</option>
+                    <option>Ohio</option>
+                    <option>Oklahoma</option>
+                    <option>Oregon</option>
+                    <option>Pennsylvania</option>
+                    <option>Rhode Island</option>
+                    <option>South Carolina</option>
+                    <option>South Dakota</option>
+                    <option>Tennessee</option>
+                    <option>Texas</option>
+                    <option>Utah</option>
+                    <option>Vermont</option>
+                    <option>Virginia</option>
+                    <option>Washington</option>
+                    <option>West Virginia</option>
+                    <option>Wisconsin</option>
+                    <option>Wyoming</option>
+                </select>
+                <span class="help-inline">State <b>*</b></span>
+                <div>
+                    <input type="text" class="input-large">
+                    <span class="help-inline">City</span>
+                    <div>
+                        <input type="text" class="input-large">
+                        <span class="help-inline">Zip Code</span>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <input type="text" class="input-large">
+                <span class="help-inline">Street Name</span>
+            </div>
+            <div>
+                <input type="text" class="input-large">
+                <span class="help-inline">Street Number</span>
+            </div>
+            <div class="form-actions">
+                <button type="submit" class="btn btn-primary">Create Account</button>
+                <button type="submit" class="btn btn-danger">Cancel</button>
+            </div>
         </form>
-      </div>
-      <div class="span2 well well-small">
-        <p>
-          <b>Account Information</b>
-          <br> Your account information allows you to access your data on the cloud and
-          to manage OPQ devices under your control. Note that your e-mail address
-          is your username.</p>
-        <p>
-          <br> All fields are
-          <b>required. </b> See our
-          <a href="#">Privacy Policy</a> for more information.</p>
-      </div>
     </div>
-  </body>
+    <div class="span2 well well-small">
+        <p>
+            <b>Account Information</b>
+            <br> Your account information allows you to access your data on the cloud and
+            to manage OPQ devices under your control. Note that your e-mail address
+            is your username.
+        </p>
+        <p>
+            Fields marked with a <b>*</b> are required. All other fields are optional and for research purposes. Provide
+            as little or as much information as you would like. Click <a href="#">here</a> to find out how we use your
+            information.
+        </p>
+    </div>
+</div>
+</body>
 
 </html>
